# qt_client

./: CMakeLists.txt  LICENSE  README.md  main.cpp
client/: CMakeLists.txt
client/include/: COMType.h  Client.h  Connection.h  SafeQueue.h  recvQueue.h  recvThread.h  sendQueue.h  sendThread.h  tprecving.h  tpsending.h
client/src/: Client.cpp  Connection.cpp  recvQueue.cpp  recvThread.cpp  sendQueue.cpp  sendThread.cpp  tprecving.cpp  tpsending.cpp
